@@ -1,8 +1,11 @@
 #!/usr/bin/perl
 
 use strict;
+
+# For PRIVATE Module::Install extensions
+use lib 'private-lib';
+
 use inc::Module::Install;
-use File::Slurp;
 
 all_from('lib/FileHandle/Unget.pm');
 
@@ -25,10 +28,6 @@ test_requires(
 license 'gpl2';
 auto_license(holder => 'David Coppit');
 
-WriteAll();
+enable_verbose_cpan_testing();
 
-if (auto_tester) {
-  my $code = read_file('Makefile');
-  $code =~ s/TEST_VERBOSE\s*=\s*0/TEST_VERBOSE=1/ or die "Couldn't enable verbose mode in Makefile";
-  write_file('Makefile', $code);
-}
+WriteAll();
